// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifExpertApp/> should a category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp (Find your gif)
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Goku"
      key="Goku"
    />
  </ol>
</Fragment>
`;

exports[`Test <GifExpertApp/> should return <GifExpertApp/> correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp (Find your gif)
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
